--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -85,7 +85,7 @@ set(PROJECT_SOURCES
     ${TS_FILES})
 
 include_directories(SYSTEM
-    "${LIB_INCLUDES}"
+#    "${LIB_INCLUDES}"
     "${DATA_FOLDER}"
     "${MODEL_FOLDER}"
     "${WRAPPER_FOLDER}"
