[user-ctl] basic get_users

--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -13,10 +13,10 @@ target_link_libraries(${PROJECT_NAME} PRIVATE
     nanodbc
     Drogon::Drogon)
 
-include_directories(#[[Data]]
+include_directories(Data
                     Data/Item)
 
-#aux_source_directory(Data DATA_SRC)
+set(TEMPLATE_SRC Data/s_list.hpp)
 aux_source_directory(Data/Item ITEM_SRC)
 aux_source_directory(controllers CTL_SRC)
 aux_source_directory(filters FILTER_SRC)
@@ -28,7 +28,7 @@ target_include_directories(${PROJECT_NAME} PRIVATE
     ${CMAKE_CURRENT_SOURCE_DIR}/models)
 
 target_sources(${PROJECT_NAME} PRIVATE
-#    ${DATA_SRC}
+    ${TEMPLATE_SRC}
     ${ITEM_SRC}
     ${SRC_DIR}
     ${CTL_SRC}
