--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -1,7 +1,7 @@
 name: Windows
 
-#on:
-#  push
+on:
+  push
 #  push:
 #    tags:
 #      - '*'
@@ -27,14 +27,22 @@ jobs:
     - uses: actions/setup-python@v1
     - uses: BSFishy/pip-action@v1
       with:
-        packages: aqtinstall
+        packages: |
+            aqtinstall
+            conan
     - run: aqt install-qt windows desktop ${{env.QT_VERSION}} win64_mingw -m qtmultimedia
     - run: aqt install-tool windows desktop tools_ifw
+    - run: conan install . --build=missing
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-      run: cmake -GNinja -B ${{github.workspace}}/build -G Ninja -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DCMAKE_PREFIX_PATH=${{github.workspace}}/${{env.QT_VERSION}}/mingw_64 -DCPACK_IFW_ROOT=${{github.workspace}}/Tools/QtInstallerFramework/4.4
+      run: |
+        cmake -GNinja -B ${{github.workspace}}/build
+        -G Ninja -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+        -DCMAKE_PREFIX_PATH=${{github.workspace}}/${{env.QT_VERSION}}/mingw_64
+        -DCPACK_IFW_ROOT=${{github.workspace}}/Tools/QtInstallerFramework/4.4
+        -DSERVER=OFF
 
     - name: Build
       # Build your program with the given configuration
@@ -43,7 +51,7 @@ jobs:
     - uses: actions/upload-artifact@v3
       with:
         name: viage
-        path: ${{github.workspace}}/build/viage-*-win64.exe
+        path: ${{github.workspace}}/build/client/viage_client-*-win64.exe
 
     #- name: Test
       # working-directory: ${{github.workspace}}/build
