[ci] only link client against jsoncpp

--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -32,17 +32,25 @@ jobs:
             conan
     - run: aqt install-qt windows desktop ${{env.QT_VERSION}} win64_mingw -m qtmultimedia
     - run: aqt install-tool windows desktop tools_ifw
-    - run: conan install . --build=missing
+    - run: >
+        conan install .
+        -s compiler=gcc
+        -s compiler.version=11.2
+        -s compiler.libcxx=libstdc++11
+        -s compiler.cppstd=gnu20
+        -s compiler.cppstd=20
+        --build=missing
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-      run: |
+      run: >
         cmake -GNinja -B ${{github.workspace}}/build
-        -G Ninja -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+        -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
         -DCMAKE_PREFIX_PATH=${{github.workspace}}/${{env.QT_VERSION}}/mingw_64
         -DCPACK_IFW_ROOT=${{github.workspace}}/Tools/QtInstallerFramework/4.4
         -DSERVER=OFF
+        -DCMAKE_TOOLCHAIN_FILE=conan-official-jsoncpp-targets.cmake
 
     - name: Build
       # Build your program with the given configuration
