--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,20 +11,22 @@ set(SERVER ON CACHE BOOL "building server")
 if(SERVER)
     # Let Drogon do the heavy lifting for configuration
     find_package(Drogon CONFIG REQUIRED)
+    include_directories(${JSONCPP_INCLUDE_DIRS})
     link_libraries(Jsoncpp_lib)
 else()
     # Only link aqainst jsoncpp
-    set(ENV{PKG_CONFIG_PATH} ${CMAKE_CURRENT_SOURCE_DIR})
-    find_package(PkgConfig REQUIRED)
-    pkg_check_modules(JSONCPP jsoncpp)
-    link_libraries(libjsoncpp)
+    set(JSONCPP_WITH_TESTS OFF CACHE BOOL "do not buid jsoncpp_tests" FORCE)
+    add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/3rdparty/jsoncpp")
+    get_target_property(JSON_INC_PATH jsoncpp_lib INTERFACE_INCLUDE_DIRECTORIES)
+    include_directories(${JSON_INC_PATH})
+    link_libraries(jsoncpp_lib)
 endif()
 
-include_directories(${JSONCPP_INCLUDE_DIRS}
-                    "${CMAKE_CURRENT_SOURCE_DIR}/lib/include")
+include_directories("${CMAKE_CURRENT_SOURCE_DIR}/lib/include")
 add_subdirectory(lib)
 
 if(CLIENT)
+    set(CPACK_GENERATOR "IFW")
     add_subdirectory(client)
 endif()
 
