--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -24,43 +24,40 @@ jobs:
         submodules: recursive
 
     - uses: seanmiddleditch/gha-setup-ninja@v3
-    - uses: actions/setup-python@v1
-    - uses: BSFishy/pip-action@v1
-      with:
-        packages: |
-            aqtinstall
-#            conan
+    - run: pip install aqtinstall conan
     - run: aqt install-qt windows desktop ${{env.QT_VERSION}} win64_mingw -m qtmultimedia
     - run: aqt install-tool windows desktop tools_ifw
-#    - run: >
-#        conan install .
-#        -s compiler=gcc
-#        -s compiler.version=11.2
-#        -s compiler.libcxx=libstdc++11
-#        -s compiler.cppstd=gnu20
-#        -s compiler.cppstd=20
-#        --build=missing
-#    - run: ls
+
+    - run: mkdir build
+
+    - name: install connan packages
+      working-directory: ./build
+      run: >
+        conan install ..
+        -s compiler="Visual Studio"
+        -s compiler.version=16
+        -sbuild_type=${{env.BUILD_TYPE}}
+        -g cmake_paths
 
     - name: Configure CMake
-      # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
-      # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-#      run: >
-#        cmake -GNinja -B ${{github.workspace}}/build
-#        -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
-#        -DSERVER=OFF
-#        -DCMAKE_PREFIX_PATH=${{github.workspace}}/${{env.QT_VERSION}}/mingw_64
-#        -DCPACK_IFW_ROOT=${{github.workspace}}/Tools/QtInstallerFramework/4.4
-      run: cmake -GNinja -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DSERVER=OFF -DCMAKE_PREFIX_PATH=${{github.workspace}}/${{env.QT_VERSION}}/mingw_64 -DCPACK_IFW_ROOT=${{github.workspace}}/Tools/QtInstallerFramework/4.4
+      working-directory: ./build
+      run: >
+        cmake .. -GNinja
+        -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+        -DSERVER=OFF
+        -DCMAKE_TOOLCHAIN_FILE="conan_paths.cmake"
+        -DCMAKE_PREFIX_PATH=${{github.workspace}}/${{env.QT_VERSION}}/mingw_64
+        -DCPACK_IFW_ROOT='${{github.workspace}}/Tools/QtInstallerFramework/4.4'
+#      run: cmake -GNinja -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DSERVER=OFF -DCMAKE_PREFIX_PATH=${{github.workspace}}/${{env.QT_VERSION}}/mingw_64 -DCPACK_IFW_ROOT=${{github.workspace}}/Tools/QtInstallerFramework/4.4
 
     - name: Build
-      # Build your program with the given configuration
+      working-directory: ./build
       run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}} --target package
 
     - uses: actions/upload-artifact@v3
       with:
         name: viage
-        path: ${{github.workspace}}/build/client/viage_client-*-win64.exe
+        path: ${{github.workspace}}/build/client/viage-*-win64.exe
 
     #- name: Test
       # working-directory: ${{github.workspace}}/build
