--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.5)
 
-project(viage_3tier VERSION 1.0.3 LANGUAGES CXX)
+project(viage VERSION 1.0.4 LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
@@ -12,21 +12,24 @@ if(SERVER)
     # Let Drogon do the heavy lifting for configuration
     find_package(Drogon CONFIG REQUIRED)
     include_directories(${JSONCPP_INCLUDE_DIRS})
-    link_libraries(Jsoncpp_lib)
 else()
     # Only link aqainst jsoncpp
-    set(JSONCPP_WITH_TESTS OFF CACHE BOOL "do not buid jsoncpp_tests" FORCE)
-    add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/3rdparty/jsoncpp")
-    get_target_property(JSON_INC_PATH jsoncpp_lib INTERFACE_INCLUDE_DIRECTORIES)
-    include_directories(${JSON_INC_PATH})
-    link_libraries(jsoncpp_lib)
+    find_package(Jsoncpp)
+    if(Jsoncpp)
+        link_libraries(Jsoncpp_lib)
+    else()
+        find_package(PkgConfig REQUIRED)
+        pkg_check_modules(JSONCPP jsoncpp)
+        link_libraries(${JSONCPP_LIBRARIES})
+    endif()
+
+    include_directories(${JSONCPP_INCLUDE_DIRS})
 endif()
 
 include_directories("${CMAKE_CURRENT_SOURCE_DIR}/lib/include")
 add_subdirectory(lib)
 
 if(CLIENT)
-    set(CPACK_GENERATOR "IFW")
     add_subdirectory(client)
 endif()
 
