--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -43,7 +43,7 @@ jobs:
 #        -g cmake_paths
 
 #    - run: echo "-DCPACK_IFW_ROOT=${{github.workspace}}/Tools/QtInstallerFramework/4.4" >> $GITHUB_PATH
-    - run: echo "C:/Program Files (x86)/Etc" | Out-File -Append -FilePath $env:GITHUB_PATH -Encoding utf8 "${{github.workspace}}/Tools/QtInstallerFramework/4.4"
+#    - run: echo "C:/Program Files (x86)/Etc" | Out-File -Append -FilePath $env:GITHUB_PATH -Encoding utf8 "${{github.workspace}}/Tools/QtInstallerFramework/4.4"
 
 
     - name: Configure CMake
@@ -53,8 +53,7 @@ jobs:
         -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
         -DSERVER=OFF
         -DCMAKE_PREFIX_PATH="${{github.workspace}}/${{env.QT_VERSION}}/mingw_64"
-#        -DCPACK_IFW_ROOT="D:/a/viage/viage/Tools/QtInstallerFramework/4.4"
-#        -DCPACK_IFW_ROOT="D:/a/viage/viage/Tools/QtInstallerFramework/4.4"
+        -DCPACK_IFW_ROOT="${{github.workspace}}/Tools/QtInstallerFramework/4.5"
 #        -DCMAKE_TOOLCHAIN_FILE="conan_paths.cmake"
 #      run: cmake .. -GNinja -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DSERVER=OFF -DCMAKE_PREFIX_PATH=${{github.workspace}}/${{env.QT_VERSION}}/mingw_64 -DCPACK_IFW_ROOT=${{github.workspace}}/Tools/QtInstallerFramework/4.4
 
@@ -64,7 +63,7 @@ jobs:
     - uses: actions/upload-artifact@v3
       with:
         name: viage
-        path: ${{github.workspace}}/build/client/viage-*-win64.exe
+        path: ${{github.workspace}}/build/viage-*-win64.exe
 
     #- name: Test
       # working-directory: ${{github.workspace}}/build
